--- a/nuhUh.css
+++ b/nuhUh.css
@@ -47,18 +47,19 @@ body {
 }
 
 .combat-log {
-    width: 25%; 
+    width: 25%;
+    height: 100px;
     height: 500px;  
     font-size: 1rem;
     overflow: scroll;
     background-color: white;
     border: black solid 2px;
-    float: middle;
+    
 }
 
 .action-button {
     position: relative ;
-    top: 10px;
+    top: 0px;
     right: 10px;
     margin-left: 10px;
     padding: 10px 15px;
@@ -68,6 +69,20 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
+.heal-button {
+    position: relative ;
+    top: -600px;
+    bottom: 50px;
+    left: 300px;
+    margin-left: 10px;
+    padding: 10px 15px;
+    background-color: #007BFF;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 .current-player {
     border: 2px solid #333;
     padding: 10px;
@@ -86,3 +101,5 @@ body {
     background-color: lightgreen;
     transition: background-color 0.5s;
 }
+
+
